<resources>
    <string name="app_name">DartMate</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="_20">20</string>
    <string name="d_20">D20</string>
    <string name="t_20">T20</string>
    <string name="_19">19</string>
    <string name="d_19">D19</string>
    <string name="t_19">T19</string>
    <string name="_18">18</string>
    <string name="d_18">D18</string>
    <string name="t_18">T18</string>
    <string name="_17">17</string>
    <string name="d_17">D17</string>
    <string name="t_17">T17</string>
    <string name="_16">16</string>
    <string name="d_16">D16</string>
    <string name="t_16">T16</string>
    <string name="_15">15</string>
    <string name="d_15">D15</string>
    <string name="t_15">T15</string>
    <string name="_14">14</string>
    <string name="d_14">D14</string>
    <string name="t_14">T14</string>
    <string name="_13">13</string>
    <string name="d_13">D13</string>
    <string name="t_13">T13</string>
    <string name="_12">12</string>
    <string name="d_12">D12</string>
    <string name="t_12">T12</string>
    <string name="_11">11</string>
    <string name="d_11">D11</string>
    <string name="t_11">T11</string>
    <string name="_10">10</string>
    <string name="d_10">D10</string>
    <string name="t_10">T10</string>
    <string name="_9">9</string>
    <string name="d_9">D9</string>
    <string name="t_9">T9</string>
    <string name="_8">8</string>
    <string name="d_8">D8</string>
    <string name="t_8">T8</string>
    <string name="_7">7</string>
    <string name="d_7">D7</string>
    <string name="t_7">T7</string>
    <string name="_6">6</string>
    <string name="d_6">D6</string>
    <string name="t_6">T6</string>
    <string name="_5">5</string>
    <string name="d_5">D5</string>
    <string name="t_5">T5</string>
    <string name="_4">4</string>
    <string name="d_4">D4</string>
    <string name="t_4">T4</string>
    <string name="_3">3</string>
    <string name="d_3">D3</string>
    <string name="t_3">T3</string>
    <string name="_2">2</string>
    <string name="d_2">D2</string>
    <string name="t_2">T2</string>
    <string name="_1">1</string>
    <string name="d_1">D1</string>
    <string name="t_1">T1</string>
    <string name="_50">50</string>
    <string name="_25">25</string>
    <string name="_0">0</string>
</resources>